desktop view completed

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                         </div>
                     </div>
                     <div class="product">
-                        <div class="product-image"><img src="./images/tripod.png" alt="">
+                        <div class="product-image"><img src="./images/mic.png" alt="">
                         </div>
-                        <h2 class="product-name">Flex Tripod</h2>
-                        <h2 class="produt-price">$50.48</h2>
+                        <h2 class="product-name">microphone</h2>
+                        <h2 class="produt-price">$120.25</h2>
 
                         <div class="star-icon">
                             <i class="fas fa-star filled"></i>
@@ -120,10 +120,10 @@
                         </p>
                     </div>
                     <div class="product">
-                        <div class="product-image"><img src="./images/tripod.png" alt="">
+                        <div class="product-image"><img src="./images/airpod.png" alt="">
                         </div>
-                        <h2 class="product-name">Flex Tripod</h2>
-                        <h2 class="produt-price">$50.48</h2>
+                        <h2 class="product-name">Airbuds</h2>
+                        <h2 class="produt-price">$100.00</h2>
 
                         <div class="star-icon">
                             <i class="fas fa-star filled"></i>
@@ -140,11 +140,11 @@
                         </p>
                     </div>
                     <div class="product">
-                        <div class="product-image"><img src="./images/tripod.png" alt="">
+                        <div class="product-image"><img src="./images/drone.png" alt="">
                         </div>
                         <div class="product-info">
-                            <h2 class="product-name">Flex Tripod</h2>
-                            <h2 class="produt-price">$50.48</h2>
+                            <h2 class="product-name">Drone</h2>
+                            <h2 class="produt-price">$980.25</h2>
 
                             <div class="star-icon">
                                 <i class="fas fa-star filled"></i>
@@ -162,10 +162,10 @@
                         </div>
                     </div>
                     <div class="product">
-                        <div class="product-image"><img src="./images/tripod.png" alt="">
+                        <div class="product-image"><img src="./images/setup.png" alt="">
                         </div>
-                        <h2 class="product-name">Flex Tripod</h2>
-                        <h2 class="produt-price">$50.48</h2>
+                        <h2 class="product-name">Light Setup</h2>
+                        <h2 class="produt-price">$1200.00</h2>
 
                         <div class="star-icon">
                             <i class="fas fa-star filled"></i>
@@ -184,8 +184,8 @@
                     <div class="product">
                         <div class="product-image"><img src="./images/tripod.png" alt="">
                         </div>
-                        <h2 class="product-name">Flex Tripod</h2>
-                        <h2 class="produt-price">$50.48</h2>
+                        <h2 class="product-name">Photoshoot set</h2>
+                        <h2 class="produt-price">$820.40</h2>
 
                         <div class="star-icon">
                             <i class="fas fa-star filled"></i>
@@ -201,13 +201,152 @@
                             Wordwide shifting <br> available <br> Buyers protection possible!
                         </p>
                     </div>
+
+
+                    <!-- <div class="product">
+                        <div class="product-image"><img src="./images/camera.png" alt="">
+                        </div>
+                        <div class="product-info">
+                            <h2 class="product-name">Vlogging Camera</h2>
+                            <h2 class="produt-price">$1800.80</h2>
+
+                            <div class="star-icon">
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <span>
+                                    4.99
+                                </span>
+                            </div>
+                            <p class="product-service">
+                                Wordwide shifting <br> available <br> Buyers protection possible!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <div class="product-image"><img src="./images/single-light.png" alt="">
+                        </div>
+                        <h2 class="product-name">Green Screen</h2>
+                        <h2 class="produt-price">$25.48</h2>
+
+                        <div class="star-icon">
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <span>
+                                4.99
+                            </span>
+                        </div>
+                        <p class="product-service">
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div>
+                    <div class="product">
+                        <div class="product-image"><img src="./images/action.png" alt="">
+                        </div>
+                        <h2 class="product-name">Action Camera</h2>
+                        <h2 class="produt-price">$820.40</h2>
+
+                        <div class="star-icon">
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <span>
+                                4.99
+                            </span>
+                        </div>
+                        <p class="product-service">
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div> -->
                 </div>
             </div>
         </section>
 
         <!-- Popular section end -->
+
+        <!-- Tech Solutions Start -->
+
+        <section class="container solution-section">
+            <div class="tech-solution">
+                <h2 class="centered-text">
+                    Tech solutions for other content creators
+                </h2>
+
+                <div class="solutions">
+                    <div class="single-solution">
+                        <a href="#">
+                            <div class="solution-image">
+                                <img src="./images/external/everyday-photographer.jpeg" alt="">
+                            </div>
+                            <div class="solution-info">
+                                <h3 class="solution-heading">
+                                    Digital artists.
+                                </h3>
+                                <p class="solution-short-para">
+                                    Take your art and style to the next level with the latest digital illustration tools
+                                    and editing software.
+                                </p>
+                                <p class="anchor-of-solution-short">
+                                    <span class="solution-span">Shop tools for digital artists</span> <i
+                                        class="fas fa-arrow-right"></i>
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="single-solution">
+                        <a href="#">
+                            <div class="solution-image">
+                                <img src="./images/external/digital-artist.jpeg" alt="">
+                            </div>
+                            <div class="solution-info">
+                                <h3 class="solution-heading">
+                                    Everyday photographers.
+                                </h3>
+                                <p class="solution-short-para">
+                                    From cameras to tripods to digital frames, get what you need to capture daily
+                                    moments and memories.
+                                </p>
+                                <p class="anchor-of-solution-short">
+                                    <span class="solution-span">Shop tools for everyday photographers</span> <i
+                                        class="fas fa-arrow-right"></i>
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="single-solution">
+                        <a href="#">
+                            <div class="solution-image">
+                                <img src="./images/external/pc-gaming-streamers.jpeg" alt="">
+                            </div>
+                            <div class="solution-info">
+                                <h3 class="solution-heading">
+                                    PC gaming streamers
+                                </h3>
+                                <p class="solution-short-para">
+                                    Build your streaming setup with video and audio gear, PC components, lighting, and
+                                    accessories.
+                                </p>
+                                <p class="anchor-of-solution-short">
+                                    <span class="solution-span">Shop game streaming essentials</span> <i
+                                        class="fas fa-arrow-right"></i>
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
+
+    <!-- Footer section start -->
     <footer>
         <div class="footer-wrapper">
             <div class="footer-info">
@@ -232,6 +371,8 @@
         </div>
     </footer>
 
+
+    <!-- Footer section end -->
 </body>
 
 </html>
