--- a/index.html
+++ b/index.html
@@ -266,6 +266,9 @@
                         </p>
                     </div> -->
                 </div>
+                <a href="">
+                    <h3 class="see-more-btn">See more <i class="fas fa-arrow-right"></i></h3>
+                </a>
             </div>
         </section>
 
