--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         </p>
                     </div> -->
                 </div>
-                <a href="">
+                <a href="" class="product-more-btn">
                     <h3 class="see-more-btn">See more <i class="fas fa-arrow-right"></i></h3>
                 </a>
             </div>
