transition added in Influencer image

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 class="fas fa-arrow-right"></i></a></button>
                 </div>
                 <div class="influencer-right">
-                    <img src="./images/main-camera.png" alt="">
+                    <img id="transform-img" src="./images/main-camera.png" alt="">
                 </div>
             </div>
         </section>
