paragraph text added

--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
             <div class="influencer-section">
                 <div class="influencer-left">
                     <h1 class="heading-text">Start your Journey as Influencer</h1>
-                    <p class="infulencer-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, adipisci.
-                        Totam cupiditate magni nisi ipsam qui fuga aspernatur earum nobis.</p>
+                    <p class="infulencer-text">Are you an aspiring influencer who is adamant about starting their
+                        influencer journey in 2022? Have you made up your mind to deal with the hardships of this career
+                        like reduced engagement, online trollers, unnecessary opinions, and perpetually being ...</p>
                     <button class="primary-btn influencer-btn"><a href="#">Preebook now <i
                                 class="fas fa-arrow-right"></i></a></button>
                 </div>
